# CppND-Capstone-Compositor

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: gui.h  main.cpp  shader.h  utils.h
src/api/: mix_camera.h  mix_mesh.h  mix_model.h  mix_shader.h
src/shaders/: buffer.frag  buffer.vert  composite.frag  composite.fs  composite.vert  composite.vs  composite_ops.frag  composite_ops.vert
